--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DoorTypeEnum.cs" />
     <Compile Include="FloorTypeEnum.cs" />
     <Compile Include="IMasterRoom.cs" />
+    <Compile Include="IMasterWindow.cs" />
     <Compile Include="RoomDoor.cs" />
     <Compile Include="RoomTypeEnum.cs" />
     <Compile Include="FrontDoor.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="MediumWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmallWindow.cs" />
+    <Compile Include="WindowMaterialEnum.cs" />
     <Compile Include="WindowTypeEnum.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
