--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BackDoor.cs" />
     <Compile Include="Bathroom.cs" />
     <Compile Include="BathroomWindow.cs" />
+    <Compile Include="ColorEnum.cs" />
     <Compile Include="DoorTypeEnum.cs" />
     <Compile Include="FloorTypeEnum.cs" />
     <Compile Include="IEntrance.cs" />
@@ -56,7 +57,6 @@
     <Compile Include="LargeWindow.cs" />
     <Compile Include="MasterBathroom.cs" />
     <Compile Include="MasterDoor.cs" />
-    <Compile Include="MasterEntrance.cs" />
     <Compile Include="MasterRoom.cs" />
     <Compile Include="MasterWindow.cs" />
     <Compile Include="MediumWindow.cs" />
