--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -45,9 +45,11 @@
     <Compile Include="Bathroom.cs" />
     <Compile Include="BathroomWindow.cs" />
     <Compile Include="ColorEnum.cs" />
+    <Compile Include="DoorMaterialEnum.cs" />
     <Compile Include="DoorTypeEnum.cs" />
     <Compile Include="FloorTypeEnum.cs" />
     <Compile Include="IEntrance.cs" />
+    <Compile Include="IMasterDoor.cs" />
     <Compile Include="IMasterRoom.cs" />
     <Compile Include="IMasterWindow.cs" />
     <Compile Include="RoomDoor.cs" />
@@ -55,7 +57,6 @@
     <Compile Include="FrontDoor.cs" />
     <Compile Include="Kitchen.cs" />
     <Compile Include="LargeWindow.cs" />
-    <Compile Include="MasterBathroom.cs" />
     <Compile Include="MasterDoor.cs" />
     <Compile Include="MasterRoom.cs" />
     <Compile Include="MasterWindow.cs" />
