--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BathroomWindow.cs" />
     <Compile Include="ColorEnum.cs" />
     <Compile Include="DoorTypeEnum.cs" />
+    <Compile Include="Entrance.cs" />
     <Compile Include="FloorTypeEnum.cs" />
     <Compile Include="IEntrance.cs" />
     <Compile Include="IMasterRoom.cs" />
