--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Entrance.cs" />
     <Compile Include="FloorTypeEnum.cs" />
     <Compile Include="IEntrance.cs" />
+    <Compile Include="IFloor.cs" />
     <Compile Include="IKitchen.cs" />
     <Compile Include="IMasterDoor.cs" />
     <Compile Include="IMasterRoom.cs" />
