--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DoorMaterialEnum.cs" />
     <Compile Include="DoorTypeEnum.cs" />
     <Compile Include="Entrance.cs" />
+    <Compile Include="Floor.cs" />
     <Compile Include="FloorTypeEnum.cs" />
     <Compile Include="IEntrance.cs" />
     <Compile Include="IFloor.cs" />
