--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -55,6 +55,7 @@
     <Compile Include="IMasterDoor.cs" />
     <Compile Include="IMasterRoom.cs" />
     <Compile Include="IMasterWindow.cs" />
+    <Compile Include="IMediumWindow.cs" />
     <Compile Include="LivingRoom.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="RoomDoor.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="MediumWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmallWindow.cs" />
+    <Compile Include="WindowCasementEnum.cs" />
     <Compile Include="WindowMaterialEnum.cs" />
     <Compile Include="WindowTypeEnum.cs" />
   </ItemGroup>
