--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BackDoor.cs" />
     <Compile Include="Bathroom.cs" />
     <Compile Include="BoGodtExceptions\DoorException.cs" />
+    <Compile Include="BoGodtExceptions\RoomException.cs" />
     <Compile Include="ColorEnum.cs" />
     <Compile Include="DoorMaterialEnum.cs" />
     <Compile Include="DoorTypeEnum.cs" />
