--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="BackDoor.cs" />
     <Compile Include="Bathroom.cs" />
+    <Compile Include="BoGodtExceptions\BathroomException.cs" />
     <Compile Include="BoGodtExceptions\DoorException.cs" />
+    <Compile Include="BoGodtExceptions\OnlyOneWindowException.cs" />
     <Compile Include="ColorEnum.cs" />
     <Compile Include="DoorMaterialEnum.cs" />
     <Compile Include="DoorTypeEnum.cs" />
