--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -53,6 +53,7 @@
     <Compile Include="BoGodtExceptions\OnlyOneFrontDoorException.cs" />
     <Compile Include="BoGodtExceptions\RoomDoorException.cs" />
     <Compile Include="BoGodtExceptions\WindowsException.cs" />
+    <Compile Include="BoGodtExceptions\MinimumRoomDoorsException.cs" />
     <Compile Include="ColorEnum.cs" />
     <Compile Include="DoorMaterialEnum.cs" />
     <Compile Include="DoorTypeEnum.cs" />
