--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -41,10 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-
     <Compile Include="BoGodtExceptions\BathroomException.cs" />
     <Compile Include="BoGodtExceptions\MaximumRoomDoorsException.cs" />
     <Compile Include="BoGodtExceptions\MaxRoomsException.cs" />
+    <Compile Include="BoGodtExceptions\OnlyFiveWindowsException.cs" />
     <Compile Include="BoGodtExceptions\OnlyOneBackDoorException.cs" />
     <Compile Include="BoGodtExceptions\OnlyOneDoorException.cs" />
     <Compile Include="BoGodtExceptions\OnlyOneFloorException.cs" />
