--- a/BoGodtLibrary/BoGodtLibrary.csproj
+++ b/BoGodtLibrary/BoGodtLibrary.csproj
@@ -47,7 +47,7 @@
     <Compile Include="BoGodtExceptions\MinimumOneWindowException.cs" />
     <Compile Include="BoGodtExceptions\OnlyFiveWindowsException.cs" />
     <Compile Include="BoGodtExceptions\OnlyOneBackDoorException.cs" />
-    <Compile Include="BoGodtExceptions\OnlyOneFloorException.cs" />
+    <Compile Include="BoGodtExceptions\CantBeThisFloorTypeException.cs" />
     <Compile Include="BoGodtExceptions\OnlyOneWindowException.cs" />
     <Compile Include="BoGodtExceptions\OnlyOneFrontDoorException.cs" />
     <Compile Include="BoGodtExceptions\RoomDoorException.cs" />
